--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="color_on_background">#4C4C4C</color>
     <color name="color_error">#AC0000</color>
     <color name="color_item_background">#F7F7F7</color>
+
+    <color name="color_box_background">#FFFFFF</color>
+    <color name="color_hint_text">#C1C1C1</color>
 </resources>
