Added Error handling, rotation and restore position for RecyclerView

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -12,6 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_background"
         android:padding="8dp">
 
         <com.google.android.material.card.MaterialCardView
