Added Photo Details screen

--- a/app/src/main/res/layout/photo_item_layout.xml
+++ b/app/src/main/res/layout/photo_item_layout.xml
@@ -8,6 +8,7 @@
     android:paddingEnd="10dp">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:selectableItemBackground"
