--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -9,5 +9,15 @@
         android:id="@+id/homeFragment"
         android:name="com.wajahatkarim3.imagine.ui.home.HomeFragment"
         android:label="@string/screen_home_title_str"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_photoDetailsFragment"
+            app:destination="@id/photoDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/photoDetailsFragment"
+        android:name="com.wajahatkarim3.imagine.ui.photodetails.PhotoDetailsFragment"
+        android:label="@string/screen_photo_details_title_str"
+        tools:layout="@layout/photo_details_fragment" />
 </navigation>
