--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -35,6 +35,7 @@
                 app:boxCollapsedPaddingTop="0dp"
                 app:hintAnimationEnabled="false"
                 app:hintEnabled="false"
+                app:endIconMode="clear_text"
                 app:startIconDrawable="@drawable/ic_baseline_search_24"
                 app:startIconTint="@color/color_hint_text">
 
@@ -42,6 +43,9 @@
                     android:id="@+id/txtSearchPhotos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:lines="1"
                     android:gravity="center_vertical"
                     android:hint="@string/hint_search_photos_text_str"
                     android:padding="10dp"
